--- a/yemulmul.html
+++ b/yemulmul.html
@@ -26,7 +26,7 @@
             h1{
             text-align: center;
             color: white;
-            font-size: 3em;
+            font-size: 2.3em;
         }  
         img{
             width: 90px;
@@ -35,10 +35,11 @@
         }
         h3{
             color: white;
-            font-size: 3em;
+            font-size: 2em;
+            text-align: center;
         }
         div{
-            background-color: rgb(255, 253, 253);
+            background-color: rgb(239, 243, 6);
             height: 3.5em;
             padding-bottom:2em;
             gap: 2em;
@@ -49,8 +50,13 @@
 </head>
 <body>
   <h1>የክፍያ ዘዴዎች</h1>
+  <h3>Android</h3>
+  <a href="https://play.google.com/store/apps/details?id=cn.tydic.ethiopay&amp;rdid=cn.tydic.ethiopay&amp;feature=md&amp;offerId"><div id="teleirr"><img src="https://play-lh.googleusercontent.com/Mtnybz6w7FMdzdQUbc7PWN3_0iLw3t9lUkwjmAa_usFCZ60zS0Xs8o00BW31JDCkAiQk=w240-h480-rw"></div></a><br><br><br>
+  <a href="https://play.google.com/store/apps/details?id=com.combanketh.mobilebanking&amp;rdid=com.combanketh.mobilebanking&amp;feature=md&amp;offerId"><div id="cbe"><img src="https://play-lh.googleusercontent.com/kKGUk63iUIMXF-SL4AklHhZnQesw3-jZT2MR6NuX-xS54ncaZJ-8tlJETZdQYyZ5-g=w240-h480-rw"></div></a>
+  <h3>iphone</h3>
   <a href="https://play.google.com/store/apps/details?id=cn.tydic.ethiopay&amp;rdid=cn.tydic.ethiopay&amp;feature=md&amp;offerId"><div id="teleirr"><img src="https://play-lh.googleusercontent.com/Mtnybz6w7FMdzdQUbc7PWN3_0iLw3t9lUkwjmAa_usFCZ60zS0Xs8o00BW31JDCkAiQk=w240-h480-rw"></div></a><br><br><br>
   <a href="https://play.google.com/store/apps/details?id=com.combanketh.mobilebanking&amp;rdid=com.combanketh.mobilebanking&amp;feature=md&amp;offerId"><div id="cbe"><img src="https://play-lh.googleusercontent.com/kKGUk63iUIMXF-SL4AklHhZnQesw3-jZT2MR6NuX-xS54ncaZJ-8tlJETZdQYyZ5-g=w240-h480-rw"></div></a>
   <h3>0947990177</h3>
+  <h3>100038862927984</h3>
 </body>
 </html>
