--- a/yemulmul.html
+++ b/yemulmul.html
@@ -54,8 +54,8 @@
   <a href="https://play.google.com/store/apps/details?id=cn.tydic.ethiopay&amp;rdid=cn.tydic.ethiopay&amp;feature=md&amp;offerId"><div id="teleirr"><img src="https://play-lh.googleusercontent.com/Mtnybz6w7FMdzdQUbc7PWN3_0iLw3t9lUkwjmAa_usFCZ60zS0Xs8o00BW31JDCkAiQk=w240-h480-rw"></div></a><br><br><br>
   <a href="https://play.google.com/store/apps/details?id=com.combanketh.mobilebanking&amp;rdid=com.combanketh.mobilebanking&amp;feature=md&amp;offerId"><div id="cbe"><img src="https://play-lh.googleusercontent.com/kKGUk63iUIMXF-SL4AklHhZnQesw3-jZT2MR6NuX-xS54ncaZJ-8tlJETZdQYyZ5-g=w240-h480-rw"></div></a>
   <h3>iphone</h3>
-  <a href="https://play.google.com/store/apps/details?id=cn.tydic.ethiopay&amp;rdid=cn.tydic.ethiopay&amp;feature=md&amp;offerId"><div id="teleirr"><img src="https://play-lh.googleusercontent.com/Mtnybz6w7FMdzdQUbc7PWN3_0iLw3t9lUkwjmAa_usFCZ60zS0Xs8o00BW31JDCkAiQk=w240-h480-rw"></div></a><br><br><br>
-  <a href="https://play.google.com/store/apps/details?id=com.combanketh.mobilebanking&amp;rdid=com.combanketh.mobilebanking&amp;feature=md&amp;offerId"><div id="cbe"><img src="https://play-lh.googleusercontent.com/kKGUk63iUIMXF-SL4AklHhZnQesw3-jZT2MR6NuX-xS54ncaZJ-8tlJETZdQYyZ5-g=w240-h480-rw"></div></a>
+  <a href="https://apps.apple.com/us/app/telebirr/id1553601084"><div id="teleirr"><img src="https://play-lh.googleusercontent.com/Mtnybz6w7FMdzdQUbc7PWN3_0iLw3t9lUkwjmAa_usFCZ60zS0Xs8o00BW31JDCkAiQk=w240-h480-rw"></div></a><br><br><br>
+  <a href="https://apps.apple.com/us/app/cbe-mobile-banking-new/id1534203410"><div id="cbe"><img src="https://play-lh.googleusercontent.com/kKGUk63iUIMXF-SL4AklHhZnQesw3-jZT2MR6NuX-xS54ncaZJ-8tlJETZdQYyZ5-g=w240-h480-rw"></div></a>
   <h3>0947990177</h3>
   <h3>100038862927984</h3>
 </body>
