--- a/part2.html
+++ b/part2.html
@@ -46,11 +46,12 @@
 
         @media (max-width: 480px) {
             #text {
-                font-size: 2.2em;
+                font-size: 4.2em;
                 
             }
             #h3{
-                font-size: 1.2em;
+                font-size: 1.3em;
+                padding-top: 1em;
             }
             
             #div2{
@@ -67,7 +68,7 @@
 
         </head>
 <body>
-    <div id="text">መልካም አዲስ ዓመት</div>
+    <div id="text"></div>
     <h3 id="h3">ከዘመን በፊት የነበረ<br>
         ዘመንን ዘመን ብሎ የፈጠረ<br>
         የዘመን ሁሉ ጌታ<br>
