--- a/yemulmul.html
+++ b/yemulmul.html
@@ -13,8 +13,7 @@
             background-attachment: fixed; /* Ensures the background is fixed when scrolling */
             margin: 0;
             padding: 0;
-            height: 100vh; /* Ensures the body covers the full height of the viewport */
-            overflow: hidden; /* Prevents scrolling if the content does not overflow */
+/* Prevents scrolling if the content does not overflow */
             position: relative; /* Allows for absolute positioning of the footer */
         }
         h1{
@@ -41,7 +40,7 @@
         div{
             background-color: rgb(239, 243, 6);
             height: 2em;
-            padding-bottom:1em;
+            padding: bottom 1em;
             gap: 2em;
             text-align: center;
         }
