--- a/yemulmul.html
+++ b/yemulmul.html
@@ -21,6 +21,11 @@
             color: white;
             font-size: 9em;
         }
+        @media (max-width: 768px) {
+            div{
+                height: 6em;
+            }
+        }
         @media (max-width: 480px) {
             h1{
             text-align: center;
@@ -34,12 +39,12 @@
         }
         h3{
             color: white;
-            font-size: 2em;
+            font-size: 6em;
             text-align: center;
         }
         div{
             background-color: rgb(239, 243, 6);
-            height: 4em;
+            height: em;
             padding: bottom 1em;
             gap: 2em;
             text-align: center;
@@ -55,7 +60,7 @@
   <h3>iphone</h3>
   <a href="https://apps.apple.com/us/app/telebirr/id1553601084"><div id="teleirr"><img src="https://play-lh.googleusercontent.com/Mtnybz6w7FMdzdQUbc7PWN3_0iLw3t9lUkwjmAa_usFCZ60zS0Xs8o00BW31JDCkAiQk=w240-h480-rw"></div></a><br><br><br>
   <a href="https://apps.apple.com/us/app/cbe-mobile-banking-new/id1534203410"><div id="cbe"><img src="https://play-lh.googleusercontent.com/kKGUk63iUIMXF-SL4AklHhZnQesw3-jZT2MR6NuX-xS54ncaZJ-8tlJETZdQYyZ5-g=w240-h480-rw"></div></a>
-  <h3>0947990177</h3>
+  <h3>0911803404</h3>
   <h3>100038862927984</h3>
 </body>
 </html>
