--- a/yemulmul.html
+++ b/yemulmul.html
@@ -25,6 +25,7 @@
             div{
                 height: 6em;
             }
+
         }
         @media (max-width: 480px) {
             h1{
@@ -36,10 +37,20 @@
             width: 60px;
             height: 66px;
         }
+        div{
+            height: 4em;
+        }
+        h3{
+            font-size: 2em;
+            color: white;
+            font-size: 3em;
+            text-align: center;
+        
+        }
         }
         h3{
             color: white;
-            font-size: 6em;
+            font-size: em;
             text-align: center;
         }
         div{
@@ -60,7 +71,7 @@
   <h3>iphone</h3>
   <a href="https://apps.apple.com/us/app/telebirr/id1553601084"><div id="teleirr"><img src="https://play-lh.googleusercontent.com/Mtnybz6w7FMdzdQUbc7PWN3_0iLw3t9lUkwjmAa_usFCZ60zS0Xs8o00BW31JDCkAiQk=w240-h480-rw"></div></a><br><br><br>
   <a href="https://apps.apple.com/us/app/cbe-mobile-banking-new/id1534203410"><div id="cbe"><img src="https://play-lh.googleusercontent.com/kKGUk63iUIMXF-SL4AklHhZnQesw3-jZT2MR6NuX-xS54ncaZJ-8tlJETZdQYyZ5-g=w240-h480-rw"></div></a>
-  <h3>0911803404</h3>
+  <h3>0947990177</h3>
   <h3>100038862927984</h3>
 </body>
 </html>
