--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
-            background-attachment: fixed; /* Ensures the background is fixed when scrolling */
+             /* Ensures the background is fixed when scrolling */
             margin: 0;
             padding: 0;
-          /* Prevents scrolling if the content does not overflow */
+            height: 100vh; /* Ensures the body covers the full height of the viewport */
+            overflow: hidden; /* Prevents scrolling if the content does not overflow */
         }
 
         div {
@@ -36,6 +37,7 @@
         button:hover{
             background-color: rgb(0, 92, 0);
             font-size: 1.1em;
+            transform: translateX(-10px);
         }        /* Responsive Styles */
         @media (max-width: 768px) {
             #text {
@@ -57,7 +59,7 @@
 <body>
     <div id="text"></div>
     <div id="div2">
-    <a href="part2.html"><button>ይግቡ</button></a>
+    <a href="part2.html"><button>አበባይሆሽ</button></a>
     </div>
     <script>
         const text = "እንኳን ለ2017  ዓ.ም በሰላም አደረሶት";
