--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
              /* Ensures the background is fixed when scrolling */
             margin: 0;
             padding: 0;
-             /* Prevents scrolling if the content does not overflow */
+                         height: 100vh; /* Ensures the body covers the full height of the viewport */
+            overflow: hidden;/* Prevents scrolling if the content does not overflow */
         }
 
         div {
