--- a/part2.html
+++ b/part2.html
@@ -91,6 +91,7 @@
         <source src="mele.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
+        <a href="yemulmul.html"><button>ስጦታ ለመስጠት</button></a>
    
 
     
