--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             transform: translateX(-10px);
         }        /* Responsive Styles */
         @media (max-width: 768px) {
+            #box{
+                margin-bottom:70px;
+        }
             #text {
                 font-size: 6.5em;
             }
@@ -57,9 +60,11 @@
     </style>
 </head>
 <body>
+    <div id="box">
     <div id="text"></div>
     <div id="div2">
     <a href="part2.html"><button>አበባይሆሽ</button></a>
+    </div>
     </div>
     <script>
         const text = "እንኳን ለ2017  ዓ.ም በሰላም አደረሶት";
